--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "follow-redirects": "^1.14.9",
+    "node-forge": "^1.2.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
@@ -21,6 +23,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
+    "url-parse": "^1.5.9",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
