--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "follow-redirects": "^1.14.9",
+    "glob-parent": "^6.0.2",
     "node-forge": "^1.2.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
